Bug 1279871 - Add Tile panel is hidden by tile (r=Standard8)

--- a/shared/css/toc.css
+++ b/shared/css/toc.css
@@ -81,6 +81,7 @@
   box-shadow: 1px 2px 4px rgba(0,0,0,.4);
   width: 250px;
   background-color: #fff;
+  z-index: 100;
 }
 
 .room-panel-add-url > input {
